--- a/views/default/lightbox/elgg-colorbox-theme/colorbox.css
+++ b/views/default/lightbox/elgg-colorbox-theme/colorbox.css
@@ -50,14 +50,10 @@
 }
 
 #cboxLoadedContent > *:not(.cboxPhoto) {
-    padding: 15px;
+    padding: 1em;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-}
-
-#cboxLoadedContent > .elgg-module:only-child {
-    padding: 0;
 }
 
 #cboxTitle {
