--- a/sass/_plugins.sass
+++ b/sass/_plugins.sass
@@ -14,3 +14,34 @@
 
 .interactions-component .elgg-form
   padding: 1.5em 1em 1em 1em
+
+.elgg-listing-summary
+  .scraper-card-video
+    min-width: 200px
+
+.elgg-module.elgg-module-scraper-card
+  background: #eee
+  border-radius: 3px
+  box-shadow: none
+
+.scraper-card-block
+  border: 0 !important
+  .elgg-body
+    +tablet
+      padding: 0 15px
+
+.scraper-card-block h3
+  font-size: 1.2em
+  font-weight: 500
+  line-height: normal
+
+.elgg-menu-follow-tag .icon
+  padding: 5px
+  background: rgba(255, 255, 255, 0.5)
+  border-radius: 50%
+  margin-left: 8px
+  margin-right: -6px
+  color: inherit
+
+.interactions-component .message
+    margin: 1em auto
