--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -15,3 +15,5 @@ $primary: hsl(200, 97%, 45%)
 $family-sans-serif: 'Open Sans', BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif
 
 $nav-height: 3.25rem
+
+@import "../vendor/bower-asset/bulma/sass/utilities/initial-variables.sass"
