--- a/sass/_plugins.sass
+++ b/sass/_plugins.sass
@@ -73,3 +73,21 @@ $input-radius: $radius !default
   .elgg-dropzone-instructions strong,
   .elgg-dropzone-instructions span
     color: $grey-light
+
+.elgg-tokeninput-token
+  display: flex
+  align-items: center
+
+.elgg-tokeninput-token .elgg-image
+  margin-right: 5px
+
+ul.token-input-list li.token-input-token
+  display: flex
+  align-items: center
+
+ul.token-input-list .elgg-image-block.elgg-tokeninput-token
+  width: auto
+  flex-grow: 1
+
+.elgg-tokeninput-token .elgg-avatar-small
+  border: none
