fix(ui): hero updates

--- a/sass/_elgg.sass
+++ b/sass/_elgg.sass
@@ -128,6 +128,8 @@
 
 .elgg-output
   @extend .content
+  .hero &
+    color: inherit
 
 .elgg-topbar-logo a
   color: #fff !important
@@ -855,6 +857,9 @@ fieldset
     width: 100%
     max-width: 24em
     margin: 0 auto
+  .elgg-module-hero &
+    width: 100%
+    padding: 0
 
 .elgg-account-help-register
   font-size: 90%
