--- a/views/default/elgg/wysiwyg.css
+++ b/views/default/elgg/wysiwyg.css
@@ -48,7 +48,6 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  overflow-x: hidden;
 }
 
 a {
@@ -78,6 +77,7 @@ hr {
 }
 
 img {
+  height: auto;
   max-width: 100%;
 }
 
@@ -221,4 +221,13 @@ html, body {
 
 body {
   padding: 0.5em;
+}
+
+ul {
+  list-style: disc;
+}
+
+ul, ol {
+  margin-left: 2em;
+  padding-left: 0;
 }
