--- a/sass/_plugins.sass
+++ b/sass/_plugins.sass
@@ -129,3 +129,22 @@ $new-item-highlight-color: lighten($primary, $color-lightning)
 .elgg-item-object-messages > article
   padding: 1.5em !important
   border-radius: 6px !important
+
+.elgg-form-photos-batch-edit .elgg-image-block
+  margin-bottom: 2em
+  padding-bottom: 2em
+  border-bottom: 1px solid $white-ter
+
+.tidypics-album-nav
+  justify-content: space-between
+  margin-bottom: 2em
+  font-size: 1.5em
+
+.tidypics-album-nav .elgg-icon
+  font-size: 0.75em !important
+
+.tidypics-photo-wrapper
+  text-align: center
+
+.tidypics-gallery
+  @extend .elgg-cards
