--- a/views/default/bulma.css
+++ b/views/default/bulma.css
@@ -8953,13 +8953,6 @@ fieldset {
   min-width: 31px;
 }
 
-.hidden {
-  display: none !important;
-}
-.hidden[style*="display:block"] {
-  display: inherit !important;
-}
-
 .float {
   float: left;
 }
@@ -9491,4 +9484,12 @@ ul.token-input-list .elgg-image-block.elgg-tokeninput-token {
 
 .tidypics-photo-wrapper {
   text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+.hidden body *.hidden,
+.hidden body * > .hidden {
+  display: none;
 }
