chore(scss): rebuild stylesheets

--- a/sass/elements/_theme_variables.scss
+++ b/sass/elements/_theme_variables.scss
@@ -16,4 +16,5 @@ $family-sans-serif: "Open Sans", BlinkMacSystemFont, -apple-system, "Segoe UI", 
 
 $nav-height: 3.25rem;
 
-@import "../bulma/utilities/initial-variables";
+@import "../bulma/utilities/all";
+@import "../elements/mixins";
