--- a/views/default/bulma.css
+++ b/views/default/bulma.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@keyframes spinAround {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(359deg); } }
 /*! bulma.io v0.4.4 | MIT License | github.com/jgthms/bulma */
 @keyframes spinAround {
   from {
