fix(hidden-class): The hidden-class now includes a !important flag, to actually hide elements and not be overridden. Relates to https://github.com/hypeJunction/hypeLists/issues/34

--- a/views/default/bulma.css
+++ b/views/default/bulma.css
@@ -10498,10 +10498,10 @@ ul.token-input-list .elgg-image-block.elgg-tokeninput-token {
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }
 
 .hidden body *.hidden,
 .hidden body * > .hidden {
-  display: none;
+  display: none !important;
 }
