--- a/sass/_after.sass
+++ b/sass/_after.sass
@@ -1,5 +1,5 @@
 .hidden
-  display: none
+  display: none !important
   body *.hidden,
   body * > .hidden
-    display: none
+    display: none !important
