CSS Fix for poll plugin

--- a/sass/_plugins.sass
+++ b/sass/_plugins.sass
@@ -148,3 +148,7 @@ $new-item-highlight-color: lighten($primary, $color-lightning)
 
 .tidypics-gallery
   @extend .elgg-cards
+
+// Poll-Support
+.elgg-object-menu-popup .elgg-menu-hz li
+  width: 100%
